syntax = "proto3";

package auth;

option go_package = "mebellar-backend/pkg/pb;pb";

import "google/protobuf/timestamp.proto";
import "user.proto";

message LoginRequest {
  string phone = 1;
  string password = 2;
  string device_name = 3;
  string device_id = 4;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
  user.User user = 3;
}

message RegisterRequest {
  string full_name = 1;
  string phone = 2;
  string password = 3;
  string role = 4; // customer | seller
}

message RegisterResponse {
  string access_token = 1;
  string refresh_token = 2;
  user.User user = 3;
}

message VerifyOTPRequest {
  string phone = 1;
  string code = 2;
}

message VerifyOTPResponse {
  bool success = 1;
  string message = 2;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message SendOTPRequest {
  string phone = 1;
}

message SendOTPResponse {
  bool success = 1;
  string message = 2;
}

service AuthService {
  rpc SendOTP(SendOTPRequest) returns (SendOTPResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc VerifyOTP(VerifyOTPRequest) returns (VerifyOTPResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
}
