syntax = "proto3";

package shop;

option go_package = "mebellar-backend/pkg/pb;pb";

import "google/protobuf/timestamp.proto";

// ============================================
// SHARED TYPES
// ============================================

message LocalizedString {
  string uz = 1;
  string ru = 2;
  string en = 3;
}

// ============================================
// WORKING HOURS
// ============================================

message DaySchedule {
  string open = 1;   // "09:00"
  string close = 2;  // "18:00"
  bool closed = 3;   // true if closed on this day
}

message WorkingHours {
  DaySchedule monday = 1;
  DaySchedule tuesday = 2;
  DaySchedule wednesday = 3;
  DaySchedule thursday = 4;
  DaySchedule friday = 5;
  DaySchedule saturday = 6;
  DaySchedule sunday = 7;
}

// ============================================
// SOCIAL LINKS
// ============================================

message SocialLinks {
  string instagram = 1;
  string telegram = 2;
  string facebook = 3;
  string website = 4;
  string youtube = 5;
}

// ============================================
// SHOP MODEL
// ============================================

message Shop {
  string id = 1;
  string seller_id = 2;
  LocalizedString name = 3;
  LocalizedString description = 4;
  LocalizedString address = 5;
  string slug = 6;
  string logo_url = 7;
  string banner_url = 8;
  string phone = 9;
  double latitude = 10;
  double longitude = 11;
  int32 region_id = 12;
  LocalizedString region_name = 13;
  WorkingHours working_hours = 14;
  bool is_active = 15;
  bool is_verified = 16;
  bool is_main = 17;
  double rating = 18;
  google.protobuf.Timestamp created_at = 19;
  google.protobuf.Timestamp updated_at = 20;
  
  // Stats (optional, for dashboard)
  int32 products_count = 21;
  int32 orders_count = 22;
}

// ============================================
// SELLER PROFILE
// ============================================

message SellerProfile {
  string id = 1;
  string user_id = 2;
  string shop_name = 3;
  string slug = 4;
  string description = 5;
  string logo_url = 6;
  string banner_url = 7;
  
  // Legal/financial info (private)
  string legal_name = 8;
  string tax_id = 9;
  string bank_account = 10;
  string bank_name = 11;
  
  // Contact & location
  string support_phone = 12;
  LocalizedString address = 13;
  double latitude = 14;
  double longitude = 15;
  
  SocialLinks social_links = 16;
  WorkingHours working_hours = 17;
  
  bool is_verified = 18;
  double rating = 19;
  
  google.protobuf.Timestamp created_at = 20;
  google.protobuf.Timestamp updated_at = 21;
}

// Public seller profile (without sensitive data)
message PublicSellerProfile {
  string id = 1;
  string shop_name = 2;
  string slug = 3;
  string description = 4;
  string logo_url = 5;
  string banner_url = 6;
  string support_phone = 7;
  LocalizedString address = 8;
  double latitude = 9;
  double longitude = 10;
  SocialLinks social_links = 11;
  WorkingHours working_hours = 12;
  bool is_verified = 13;
  double rating = 14;
}

// ============================================
// REQUEST/RESPONSE MESSAGES
// ============================================

// --- Shop CRUD ---

message ListShopsRequest {
  bool active_only = 1;
  string seller_id = 2;  // Filter by seller
  int32 region_id = 3;   // Filter by region
  int32 page = 4;
  int32 limit = 5;
}

message ListShopsResponse {
  repeated Shop shops = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

message GetMyShopsRequest {
  // Uses auth context for seller_id
}

message GetMyShopsResponse {
  repeated Shop shops = 1;
  int32 count = 2;
}

message GetShopRequest {
  string id = 1;
}

message GetShopBySlugRequest {
  string slug = 1;
}

message ShopResponse {
  Shop shop = 1;
}

message CreateShopRequest {
  LocalizedString name = 1;
  LocalizedString description = 2;
  LocalizedString address = 3;
  string phone = 4;
  int32 region_id = 5;
  double latitude = 6;
  double longitude = 7;
  WorkingHours working_hours = 8;
  bool is_main = 9;
  bool is_active = 10;
}

message UpdateShopRequest {
  string id = 1;
  optional LocalizedString name = 2;
  optional LocalizedString description = 3;
  optional LocalizedString address = 4;
  optional string phone = 5;
  optional int32 region_id = 6;
  optional double latitude = 7;
  optional double longitude = 8;
  optional string logo_url = 9;
  optional string banner_url = 10;
  optional WorkingHours working_hours = 11;
  optional bool is_main = 12;
  optional bool is_active = 13;
}

message DeleteShopRequest {
  string id = 1;
}

// --- Seller Profile ---

message GetSellerProfileRequest {
  // Uses auth context for user_id
}

message GetPublicSellerProfileRequest {
  string slug = 1;
}

message SellerProfileResponse {
  SellerProfile profile = 1;
}

message PublicSellerProfileResponse {
  PublicSellerProfile profile = 1;
}

message UpgradeToSellerRequest {
  string shop_name = 1;
  string description = 2;
  string support_phone = 3;
  LocalizedString address = 4;
  SocialLinks social_links = 5;
  WorkingHours working_hours = 6;
}

message UpgradeToSellerResponse {
  bool success = 1;
  string message = 2;
  SellerProfile profile = 3;
}

message UpdateSellerProfileRequest {
  optional string shop_name = 1;
  optional string description = 2;
  optional string logo_url = 3;
  optional string banner_url = 4;
  optional string support_phone = 5;
  optional LocalizedString address = 6;
  optional double latitude = 7;
  optional double longitude = 8;
  optional SocialLinks social_links = 9;
  optional WorkingHours working_hours = 10;
}

message UpdateLegalInfoRequest {
  string legal_name = 1;
  string tax_id = 2;
  string bank_account = 3;
  string bank_name = 4;
}

message DeleteSellerAccountRequest {
  // Uses auth context
}

message DeleteSellerAccountResponse {
  bool success = 1;
  string message = 2;
}

// --- Shop Image Upload ---

message UploadShopImageRequest {
  oneof data {
    ShopImageMetadata metadata = 1;
    bytes chunk = 2;
  }
}

message ShopImageMetadata {
  string shop_id = 1;
  string image_type = 2;  // "logo" or "banner"
  string filename = 3;
  string content_type = 4;
}

message UploadShopImageResponse {
  bool success = 1;
  string image_url = 2;
  string message = 3;
}

// --- Admin Shop Management ---

message AdminListShopsRequest {
  string seller_id = 1;
  int32 region_id = 2;
  bool active_only = 3;
  bool verified_only = 4;
  string search = 5;  // Search in name
  int32 page = 6;
  int32 limit = 7;
}

message AdminUpdateShopRequest {
  string id = 1;
  optional bool is_verified = 2;
  optional bool is_active = 3;
  // Admin can update all shop fields
  optional LocalizedString name = 4;
  optional LocalizedString description = 5;
  optional LocalizedString address = 6;
}

// Empty message
message Empty {}

// ============================================
// SHOP SERVICE
// ============================================

service ShopService {
  // Public endpoints
  rpc GetShopBySlug(GetShopBySlugRequest) returns (ShopResponse);
  rpc GetPublicSellerProfile(GetPublicSellerProfileRequest) returns (PublicSellerProfileResponse);

  // Seller endpoints (requires auth + seller role)
  rpc GetMyShops(GetMyShopsRequest) returns (GetMyShopsResponse);
  rpc GetShop(GetShopRequest) returns (ShopResponse);
  rpc CreateShop(CreateShopRequest) returns (ShopResponse);
  rpc UpdateShop(UpdateShopRequest) returns (ShopResponse);
  rpc DeleteShop(DeleteShopRequest) returns (Empty);
  
  // Seller profile management
  rpc GetSellerProfile(GetSellerProfileRequest) returns (SellerProfileResponse);
  rpc UpgradeToSeller(UpgradeToSellerRequest) returns (UpgradeToSellerResponse);
  rpc UpdateSellerProfile(UpdateSellerProfileRequest) returns (SellerProfileResponse);
  rpc UpdateLegalInfo(UpdateLegalInfoRequest) returns (SellerProfileResponse);
  rpc DeleteSellerAccount(DeleteSellerAccountRequest) returns (DeleteSellerAccountResponse);

  // Shop image upload via streaming
  rpc UploadShopImage(stream UploadShopImageRequest) returns (UploadShopImageResponse);

  // Admin endpoints (requires admin/moderator role)
  rpc AdminListShops(AdminListShopsRequest) returns (ListShopsResponse);
  rpc AdminGetShop(GetShopRequest) returns (ShopResponse);
  rpc AdminUpdateShop(AdminUpdateShopRequest) returns (ShopResponse);
  rpc AdminDeleteShop(DeleteShopRequest) returns (Empty);
}
